<resources>
    <string name="app_name">FindMyParking</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Ingresar</string>
    <!-- Strings related to login -->
    <string name="action_sign_in">Iniciar sesión o registrar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">La dirección de correo es inválida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es inválida</string>
    <string name="error_cero">Ingresa un valor mayor a cero</string>
    <string name="error_longitud">Ingresa un número telefónico válido (De 6 a 15 dígitos)</string>
    <string name="error_field_required">Éste campo es requerido</string>
    <string name="permission_rationale">"Los permisos de los contactos son necesarios para completar el correo electrónico."
    </string>
    <string name="titleHorario">Horario</string>
    <string name="email">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="cliente">Cliente</string>
    <string name="admin">Administrador</string>
    <string name="mCliente">¿Buscas donde parquear?</string>
    <string name="madmin">O ¿Quieres alquilar tu parqueadero?</string>
    <string name="ingresarConGoogle">Ingresar con Google</string>
    <string name="ingresarConFb">Ingresar con Facebook</string>
    <string name="rol">Selecciona tu rol</string>
    <string name="registro">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tel">Telefono</string>
    <string name="fechaNac">Fecha Nacimiento</string>
    <string name="cedula">Cedula</string>
    <string name="info"><![CDATA[2018 E&A Limited. All rights reserved.]]></string>
    <string name="roles">Selecciona tu perfil</string>
    <string-array name="opcRoles">
        <item>@string/cliente</item>
        <item>@string/admin</item>
    </string-array>
    <string name="selecHorario">Seleccione disponibilidad de horario</string>
    <string name="opcHorario1">8am - 6pm</string>
    <string name="opcHorario2">6am - 8pm</string>
    <string name="opcHorario3">24 horas</string>
    <string name="opcHorario4">8am - 8pm</string>
    <string-array name="horarios">
        <item>@string/selecHorario</item>
        <item>@string/opcHorario1</item>
        <item>@string/opcHorario2</item>
        <item>@string/opcHorario3</item>
        <item>@string/opcHorario4</item>
    </string-array>
    <string name="exitoRegistro">Bienvenido al sistema, por favor ingrese desde el panel de log in.</string>
    <string name="errorLogin">No se pudo ingresar, por favor reintente más tarde.</string>
    <string name="ingresarConCorreo">Ingresar con Correo</string>
    <string name="api">322032930160-219lo4d3kugeasussbs4qkbf01ahr93u.apps.googleusercontent.com</string>
    <string name="title_activity_listado_parqueadero1">FindMyParking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="salir">Cerrar Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="anunciar">Anunciar</string>
    <string name="herramientas">Herramientas</string>
    <string name="compartir">Compartir</string>
    <string name="enviar">Enviar</string>
    <string name="nombreParqueo">Nombre del Parqueadero</string>
    <string name="horario">Especifique el horario</string>
    <string name="preciohora">Precio por hora</string>
    <string name="ubicarme">Ubicar Parqueadero</string>
    <string name="infoUbicar">Posicionese dentro del parqueadero y luego presione el siguiente botón para ubicarlo</string>
    <string name="btnUbicar">¡Ubicado!</string>
    <string name="btnNoUbicar">Vuelva a intentarlo</string>
    <string name="exitoSave">Parqueadero guardado correctamente</string>
    <string name="errorSelect">Por favor, seleccione una opción.</string>
</resources>
