<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro">

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:background="@android:color/transparent" />

    <EditText
        android:id="@+id/txtParqueo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/nombreParqueo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="19dp"
        android:layout_gravity="center"
        android:text="TextView" />

    <Spinner
        android:id="@+id/spHorario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:entries="@array/horarios" />

    <EditText
        android:id="@+id/txtTelePar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/tel"
        android:inputType="phone" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/preciohora"
        android:inputType="number" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/infoUbicar" />

    <Button
        android:id="@+id/btnUbicar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ubicarme"
        android:onClick="onClick"/>

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:text="@string/registro" />
</LinearLayout>