<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Principal">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:background="@android:color/transparent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/fb" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:onClick="ingresar"
        android:text="@string/ingresarConGoogle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresarConCorreo" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textAlignment="center" />

</LinearLayout>